# startup-jobs-agent

./: .gitignore  main.py  output.csv  pyproject.toml  readme.md  requirements.txt  ruff.toml  scrape.py
src/: main.py
src/application/job_offers/: streamlit.py
src/constants/: env.py
src/database/: notion.py
src/domain/: jobs.py
src/domain/job_offers/: job_offers.py
src/domain/scrappers/: base.py  firecrawl.py  general.py  generic.py  linkedin.py  linkedin_job.py  pdf.py  plain_text.py
src/infrastructure/: genai.py  groq.py  http_fetcher.py  notion.py  positions_raw.py  selenium.py
src/providers/: generic_scraper_provider.py
src/providers/constants/: env.py  utils.py
src/providers/genai/: genai.py
src/providers/groq/: groq.py
src/providers/notion/: notion.py
src/providers/selenium/: selenium.py
src/providers/utils/: job_offers.py
src/readers/: pdf.py
src/runners/: streamlit.py
src/scrapers/: base.py  link.py  linkedin.py
