[project]
name = "chat-backend"
version = "0.1.0"
description = ""
authors = [
  { name = "rafarubin", email = "rafa@gmail.com" },
  { name = "martin76ec", email = "larreaamartin@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit (>=1.42.0,<2.0.0)",
  "selenium (>=4.28.1,<5.0.0)",
  "beautifulsoup4 (>=4.13.3,<5.0.0)",
  "lxml (>=5.3.1,<6.0.0)",
  "html5lib (>=1.1,<2.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "notion-database (>=1.2.2,<2.0.0)",
  "notion-client (>=2.3.0,<3.0.0)",
  "bs4 (>=0.0.2,<0.0.3)",
  "google-generativeai (>=0.8.4,<0.9.0)",
  "docling (>=2.24.0,<3.0.0)",
  "dotenv (>=0.9.9,<0.10.0)",
  "langchain (>=0.3.19,<0.4.0)",
  "langchain-groq (>=0.2.4,<0.3.0)",
  "genai (>=2.1.0,<3.0.0)",
  "pillow (>=11.1.0,<12.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.32.2"
black = "^25.1.0"

[tool.poe.tasks]
dev = "python main.py"
lint = "python -m black --target-version=py37 ."
